--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
     "react": "https://esm.sh/react@^19.1.1",
     "react/": "https://esm.sh/react@^19.1.1/",
     "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.539.0"
+    "lucide-react": "https://esm.sh/lucide-react@^0.539.0",
+    "chart.js": "https://esm.sh/chart.js@^4.4.3",
+    "react-chartjs-2": "https://esm.sh/react-chartjs-2@^5.2.0"
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
-<body class="bg-gray-900">
+<body class="bg-black">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 </body>
